


2025-08-29  윤종혁	<ageldama@gmail.com>

	v0.0.5 : 안정화, 기본기능, 다양한 플랫폼 바이너리 릴리즈.

	* ChangeLog 도 좀 기록을 해야할거 같아서.

